# cargo-arc

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  package.json
docs/: ARCHITECTURE.md
js/: app_state.js  arc_logic.js  derived_state.js  derived_state.test.js  dom_adapter.js  dom_adapter.test.js  highlight_integration.test.js  highlight_logic.js  highlight_logic.test.js  highlight_renderer.js  highlight_renderer.test.js  highlight_timing.test.js  layer_manager.js  layer_manager.test.js  search.js  search.test.js  selectors.js  selectors.test.js  sidebar.js  sidebar.test.js  static_data.js  static_data.test.js  svg_script.js  svg_script.test.js  virtual_edge_logic.js  virtual_edge_logic.test.js
scripts/: release.sh
src/: analyze.rs  cli.rs  dom_adapter.js  (+21 more)
tests/fixtures/feature_test_workspace/: Cargo.toml
tests/fixtures/feature_test_workspace/build-helper/: Cargo.toml
tests/fixtures/feature_test_workspace/build-helper/src/: lib.rs
tests/fixtures/feature_test_workspace/core-utils/: Cargo.toml
tests/fixtures/feature_test_workspace/core-utils/src/: lib.rs
tests/fixtures/feature_test_workspace/core/src/: lib.rs
tests/fixtures/feature_test_workspace/server-utils/: Cargo.toml
tests/fixtures/feature_test_workspace/server-utils/src/: lib.rs
tests/fixtures/feature_test_workspace/shared-lib/: Cargo.toml
tests/fixtures/feature_test_workspace/shared-lib/src/: lib.rs
tests/fixtures/feature_test_workspace/testlib/: Cargo.toml
tests/fixtures/feature_test_workspace/web-utils/: Cargo.toml
tests/fixtures/feature_test_workspace/web-utils/src/: lib.rs
(+52 files in other folders)
